--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 }
 
 jar {
+    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     manifest {
         attributes 'Main-Class': 'io.minetweak.instalauncher.Instalauncher'
     }
